--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
 
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -18,66 +18,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TheMusicsHorizons">
+
         <activity
             android:name=".activities.SplashActivity"
             android:exported="true"
             android:theme="@style/Theme.TheMusicsHorizons.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activities.LoginActivity"
-            android:exported="false"
-            android:theme="@style/Theme.TheMusicsHorizons.NoActionBar">
-        </activity>
-        <activity
-            android:name=".activities.RegisterActivity"
-            android:exported="false"
-            android:theme="@style/Theme.TheMusicsHorizons.NoActionBar">
-        </activity>
-        <activity
-            android:name=".activities.HomeActivity"
-            android:exported="false"
-            android:theme="@style/Theme.TheMusicsHorizons">
-        </activity>
-        <activity
-            android:name=".activities.ScanAudioActivity"
-            android:exported="false"
-            android:theme="@style/Theme.TheMusicsHorizons.NoActionBar">
-        </activity>
-        <activity
-            android:name=".activities.ScanVisualActivity"
-            android:exported="false"
-            android:theme="@style/Theme.TheMusicsHorizons.NoActionBar">
-        </activity>
-        <activity
-            android:name=".activities.ExploreEventsActivity"
-            android:exported="false"
-            android:theme="@style/Theme.TheMusicsHorizons">
-        </activity>
-        <activity
-            android:name=".activities.MyHorizonActivity"
-            android:exported="false"
-            android:theme="@style/Theme.TheMusicsHorizons">
-        </activity>
-        <activity
-            android:name=".activities.ProfileActivity"
-            android:exported="false"
-            android:theme="@style/Theme.TheMusicsHorizons">
-        </activity>
-        <activity
-            android:name=".activities.AudioResultsActivity"
-            android:exported="false"
-            android:theme="@style/Theme.TheMusicsHorizons">
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:theme="@style/Theme.TheMusicsHorizons">
-        </activity>
+
+        <activity android:name=".activities.LoginActivity" android:exported="false" android:theme="@style/Theme.TheMusicsHorizons.NoActionBar" />
+        <activity android:name=".activities.RegisterActivity" android:exported="false" android:theme="@style/Theme.TheMusicsHorizons.NoActionBar" />
+        <activity android:name=".activities.HomeActivity" android:exported="false" android:theme="@style/Theme.TheMusicsHorizons" />
+        <activity android:name=".activities.ScanAudioActivity" android:exported="false" android:theme="@style/Theme.TheMusicsHorizons.NoActionBar" />
+        <activity android:name=".activities.ScanVisualActivity" android:exported="false" android:theme="@style/Theme.TheMusicsHorizons.NoActionBar" />
+        <activity android:name=".activities.ExploreEventsActivity" android:exported="false" android:theme="@style/Theme.TheMusicsHorizons" />
+        <activity android:name=".activities.AudioResultsActivity" android:exported="false" android:theme="@style/Theme.TheMusicsHorizons" />
+        <activity android:name=".activities.SongDetailActivity" android:exported="false" android:theme="@style/Theme.TheMusicsHorizons" />
+
     </application>
 
 </manifest>
